so it was token bullcrap in the end